<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.sourceforge.javamod</groupId>
  <artifactId>JavaMod</artifactId>
  <version>3.9.6</version>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <argLine>
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>beatunes</id> <!-- for jogg -->
      <url>https://www.beatunes.com/repo/maven2/</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.14</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>jlayer</artifactId>
      <version>1.0.3</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
      <artifactId>vavi-sound-flac</artifactId>
      <version>0.0.7</version>
    </dependency>
    <dependency>
      <groupId>org.jcraft</groupId>
      <artifactId>jorbis</artifactId>
      <version>0.0.17</version>
    </dependency>
    <dependency>
      <groupId>com.jcraft</groupId>
      <artifactId>jogg</artifactId>
      <version>0.0.7</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / net.sourceforge.jmac -->
      <artifactId>jmac</artifactId>
      <version>1.7.6v</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.JSIDPlay2</groupId> <!-- com.github.umjammer.JSIDPlay2 / jsidplay2 -->
      <artifactId>jsidplay2</artifactId>
      <version>4.10.0v</version>
      <exclusions>
        <exclusion>
          <groupId>org.openjfx</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>net.java.truevfs</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.mysql</groupId>
          <artifactId>mysql-connector-j</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.tomcat.embed</groupId>
          <artifactId>tomcat-embed-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.hsqldb</groupId>
          <artifactId>hsqldb</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.hibernate</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>net.sf.sevenzipjbinding</groupId>
          <artifactId>sevenzipjbinding*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>xuggle</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>sidblaster</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>kickassembler</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>exsid</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>hardsid</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
      <artifactId>vavi-sound-emu</artifactId>
      <version>0.0.5</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
